test/types/range/cast-assign-init/illegal-inits.compopts
# When the bugs are fixed, uncomment the corresponding lines below.
# The appropriate .good files are provided already.

-s to='bool' -s from='bool'  # illegal-inits.ok.good
# accepted by mistake: -s to='bool' -s from='color'  # illegal-inits.0-1.good
# accepted by mistake: -s to='bool' -s from='int(8)'  # illegal-inits.0-2.good
# accepted by mistake: -s to='bool' -s from='uint(8)'  # illegal-inits.0-3.good
# accepted by mistake: -s to='bool' -s from='int(64)'  # illegal-inits.0-4.good
# need better error: -s to='bool' -s from='uint(64)'  # illegal-inits.0-5.good
# accepted by mistake: -s to='color' -s from='bool'  # illegal-inits.1-0.good
-s to='color' -s from='color'  # illegal-inits.ok.good
# accepted by mistake: -s to='color' -s from='int(8)'  # illegal-inits.1-2.good
# accepted by mistake: -s to='color' -s from='uint(8)'  # illegal-inits.1-3.good
# accepted by mistake: -s to='color' -s from='int(64)'  # illegal-inits.1-4.good
# need better error: -s to='color' -s from='uint(64)'  # illegal-inits.1-5.good
# rejected by mistake: -s to='int(8)' -s from='bool'  # illegal-inits.ok.good
# need better error: -s to='int(8)' -s from='color'  # illegal-inits.2-1.good
-s to='int(8)' -s from='int(8)'  # illegal-inits.ok.good
# need better error: -s to='int(8)' -s from='uint(8)'  # illegal-inits.2-3.good
# need better error: -s to='int(8)' -s from='int(64)'  # illegal-inits.2-4.good
# need better error: -s to='int(8)' -s from='uint(64)'  # illegal-inits.2-5.good
# rejected by mistake: -s to='uint(8)' -s from='bool'  # illegal-inits.ok.good
# need better error: -s to='uint(8)' -s from='color'  # illegal-inits.3-1.good
-s to='uint(8)' -s from='int(8)'  # illegal-inits.ok.good
-s to='uint(8)' -s from='uint(8)'  # illegal-inits.ok.good
# need better error: -s to='uint(8)' -s from='int(64)'  # illegal-inits.3-4.good
# need better error: -s to='uint(8)' -s from='uint(64)'  # illegal-inits.3-5.good
-s to='int(64)' -s from='bool'  # illegal-inits.ok.good
# accepted by mistake: -s to='int(64)' -s from='color'  # illegal-inits.4-1.good
-s to='int(64)' -s from='int(8)'  # illegal-inits.ok.good
-s to='int(64)' -s from='uint(8)'  # illegal-inits.ok.good
-s to='int(64)' -s from='int(64)'  # illegal-inits.ok.good
# need better error: -s to='int(64)' -s from='uint(64)'  # illegal-inits.4-5.good
-s to='uint(64)' -s from='bool'  # illegal-inits.ok.good
# accepted by mistake: -s to='uint(64)' -s from='color'  # illegal-inits.5-1.good
-s to='uint(64)' -s from='int(8)'  # illegal-inits.ok.good
-s to='uint(64)' -s from='uint(8)'  # illegal-inits.ok.good
-s to='uint(64)' -s from='int(64)'  # illegal-inits.ok.good
-s to='uint(64)' -s from='uint(64)'  # illegal-inits.ok.good
